AWE/src/objects/Advance_Workflow_Limits__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>It  hold thresholds for   number actions and type of fields used per action for each rule. As rule action is saved  validations  against the threshold would validate if the rule action can be saved.</description>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Limit__c</fullName>
        <label>Type of Limit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Advance Workflow Limits</label>
</CustomObject>